增加用户、附件后端功能

--- a/sel-web/src/main/webapp/index.html
+++ b/sel-web/src/main/webapp/index.html
@@ -30,7 +30,11 @@
         &lt;url-pattern&gt;/*&lt;/url-pattern&gt;<br />
         &lt;/filter-mapping&gt;<br />
     </li>
+    <a href="/user/login"> 去登录页</a>
 </ul>
+<script type="text/javascript">
+
+</script>
 
 
 
